<resources>
    <string name="app_name">NHGP App</string>
    <string name="hello_world">Hello world!</string>

    <string name="calories_label">Calories: </string>
    <string name="steps_label">Steps: </string>
    <string name="distance_label">Distance: </string>
    <string name="foodexercise_label">Food and Exercise</string>
    <string name="past_appointments">Past Appointments</string>
    <string name="current_appointments">Current Appointments</string>
    <string name="make_appointments">Make Appointments</string>

    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>

    <string name="current_steps">Current Steps: </string>
    <string name="target_steps">Target Steps: </string>
    <string name="your_average_steps">Your Average Steps: </string>
    <string name="typical_average_steps">Typical Average Steps: </string>

    <string name="current_distance">Current Distance: </string>
    <string name="target_distance">Target Distance: </string>
    <string name="your_average_distance">Your Average Distance: </string>
    <string name="typical_average_distance">Typical Average Distance: </string>

    <string name="calories_expended">Calories Expended: </string>
    <string name="calories_consumed">Calories Consumed: </string>
    <string name="net_calories">Net Calories: </string>
    <string name="target_calories">Target Calories: </string>

    <string name="time_input_label">Time: </string>

    <string name="minimum_pressure_label">Lower Limit: </string>
    <string name="maximum_pressure_label">Upper Limit: </string>
    <string name="minimum_pressure_tv">YYY</string>
    <string name="maximum_pressure_tv">YYY</string>
    <string name="pressure_input_label">Pressure: </string>
    <string name="input_pressure_button">Input Pressure</string>

    <string name="minimum_glucose_label">Lower Limit: </string>
    <string name="maximum_glucose_label">Upper Limit: </string>
    <string name="minimum_glucose_tv">YYY</string>
    <string name="maximum_glucose_tv">YYY</string>
    <string name="glucose_input_label">Glucose: </string>
    <string name="input_glucose_button">Input Glucose</string>

    <string name="action_settings">Settings</string>
    <string name="action_account">Account</string>
    <string name="action_add">Add</string>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_fitness">Fitness</string>
    <string name="title_activity_steps">Steps Walked</string>
    <string name="title_activity_distance">Distance Walked</string>
    <string name="title_activity_calories">Calories</string>
    <string name="title_activity_blood_glucose">Blood Glucose</string>
    <string name="title_activity_blood_pressure">Blood Pressure</string>
    <string name="title_activity_pill">Pill</string>
    <string name="title_activity_login">Login</string>

    <string name="number_of_graphs_file_key">number_of_graphs_file_key</string>
    <string name="number_of_pills_file_key">number_of_pills_file_key</string>
    <string name="no_medicine_text">You currently do not have any medicines</string>

    <string name="add_blood_glucose">Add Blood Glucose</string>
    <string name="add_blood_pressure">Add Blood Pressure</string>
    <string name="add_food_exercise">Add Food and Exercise</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_appointment_type">Appointment Type</string>
    <string name="title_activity_appointment_time">Appointment Time</string>
    <string name="title_activity_appointment_details">Appointment Details</string>
    <string name="appointment_polyclinic_label">Polyclinic: </string>
    <string name="appointment_service_label">Service: </string>
    <string name="title_activity_past_appointments">Past Appointments</string>
    <string name="title_activity_current_appointments">Current Appointments</string>
</resources>
