<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.chrislxj.nhgpapp.Main">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_account"
        android:title="@string/action_account"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/add_blood_glucose"
                android:title="@string/add_blood_glucose" />
            <item android:id="@+id/add_blood_pressure"
                android:title="@string/add_blood_pressure" />
            <item android:id="@+id/add_food_exercise"
                android:title="@string/add_food_exercise" />
        </menu>
    </item>

</menu>
