<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/pressure_timeframe_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.5">
        <Button
            android:text="@string/day"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip" />
        <Button
            android:text="@string/week"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip" />
        <Button
            android:text="@string/month"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip" />
    </LinearLayout>

    <!--Minimum Limit-->
    <TextView
        android:id="@+id/minimum_pressure_label"
        android:text="@string/minimum_pressure_label"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/minimum_pressure_tv"
        android:text="@string/minimum_pressure_tv"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <!--Maximum Limit-->
    <TextView
        android:id="@+id/maximum_pressure_label"
        android:text="@string/maximum_pressure_label"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/minimum_pressure_label"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/maximum_pressure_tv"
        android:text="@string/maximum_pressure_tv"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/minimum_pressure_label"
        android:layout_alignParentRight="true"/>

    <!--Input Button-->
    <Button
        android:id="@+id/pressure_input_button"
        android:text="@string/input_pressure_button"
        android:layout_width="100dip"
        android:layout_height="60dip"
        android:layout_above="@id/maximum_pressure_label"
        android:layout_alignParentRight="true"
        android:onClick=""
        />

    <!--Time Input-->
    <TextView
        android:id="@+id/time_input_label"
        android:text="@string/time_input_label"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/maximum_pressure_label"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:id="@+id/time_input_textbox"
        android:textSize="20dip"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_above="@id/maximum_pressure_label"
        android:layout_toRightOf="@id/time_input_label"
        android:layout_toLeftOf="@id/pressure_input_button"/>

    <!--Value Input-->
    <TextView
        android:id="@+id/pressure_input_label"
        android:text="@string/pressure_input_label"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/time_input_label"
        android:layout_alignParentLeft="true"/>
    <EditText
        android:id="@+id/pressure_input_textbox"
        android:textSize="20dip"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_above="@id/time_input_label"
        android:layout_toRightOf="@id/pressure_input_label"
        android:layout_toLeftOf="@id/pressure_input_button"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/pressure_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/pressure_input_button"
        android:layout_below="@id/pressure_timeframe_layout"/>

</RelativeLayout>
