<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:id="@+id/calories_timeframe_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.5">
        <Button
            android:text="@string/day"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:onClick="setTimeframeDay"/>
        <Button
            android:text="@string/week"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:onClick="setTimeframeWeek"/>
        <Button
            android:text="@string/month"
            android:textSize="18dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="40dip"
            android:onClick="setTimeframeMonth"/>
    </LinearLayout>

    <!--Target Calories-->
    <TextView
        android:id="@+id/target_calories_label"
        android:text="@string/target_calories"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/target_calories_tv"
        android:text="XXXX"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <!--Net Calories-->
    <TextView
        android:id="@+id/net_calories_label"
        android:text="@string/net_calories"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/target_calories_label"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/net_calories_tv"
        android:text="XXXX"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/target_calories_label"
        android:layout_alignParentRight="true"/>

    <!--Calories Consumed-->
    <TextView
        android:id="@+id/calories_consumed_label"
        android:text="@string/calories_consumed"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/net_calories_label"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/calories_consumed_tv"
        android:text="XXXX"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/net_calories_label"
        android:layout_alignParentRight="true"/>

    <!--Calories Expended-->
    <TextView
        android:id="@+id/calories_expended_label"
        android:text="@string/calories_expended"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/calories_consumed_label"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/calories_expended_tv"
        android:text="XXXX"
        android:textSize="20dip"
        android:layout_width="wrap_content"
        android:layout_height="30dip"
        android:layout_above="@id/calories_consumed_label"
        android:layout_alignParentRight="true"/>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/distance_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/calories_expended_label"
        android:layout_below="@id/calories_timeframe_layout"/>

</RelativeLayout>
