<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="3"
    android:padding="20dip"
    android:orientation="vertical"
    tools:context="com.example.chrislxj.nhgpapp.FragmentAppointment">
    <Button
        android:onClick="openAppointmentTypeActivity"
        android:id="@+id/make_appointments_btn"
        android:text="@string/make_appointments"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:layout_width="match_parent" />

    <Button
        android:onClick="openCurrentAppointmentsActivity"
        android:id="@+id/current_appointments_btn"
        android:text="@string/current_appointments"
        android:layout_marginTop="@dimen/appointment_button_margins"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:onClick="openPastAppointmentsActivity"
        android:id="@+id/past_appointments_btn"
        android:text="@string/past_appointments"
        android:layout_marginTop="@dimen/appointment_button_margins"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

</LinearLayout>
