<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="6">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:onClick="openBloodActivity">
        <TextView
            android:id="@+id/blood_label"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="XXXX"
            android:textSize="@dimen/fitness_fragment_graph_text_size"/>
        <TextView
            android:id="@+id/blood_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="XXXX"
            android:textSize="@dimen/fitness_fragment_graph_text_size"/>
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/blood_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/blood_label"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openCaloriesActivity">
        <TextView
            android:id="@+id/calories_label"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/calories_label"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
        <TextView
            android:id="@+id/calories_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="XXXX"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openStepsActivity">
        <TextView
            android:id="@+id/steps_label"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/steps_label"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
        <TextView
            android:id="@+id/steps_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="XXXX"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="openDistanceActivity">
        <TextView
            android:id="@+id/distance_label"
            android:layout_width="180dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/distance_label"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
        <TextView
            android:id="@+id/distance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="XXXX"
            android:textSize="@dimen/fitness_fragment_plain_text_size"/>
    </RelativeLayout>
</LinearLayout>